# napari-wsi

./: .gitignore  .prettierignore  AUTOHRS.md  CONTRIBUTING.md  README.md  pyproject.toml  tasks.py
.github/workflows/: main.yml
.napari-hub/: DESCRIPTION.md
napari_wsi/: __init__.py  _rasterio.py  _tifffile.py  color_transform.py  common.py  multiscales.py  napari.yaml  reader.py  util.py  widget.py
napari_wsi/backends/: common.py  openslide.py  rasterio.py  wsidicom.py
tests/: conftest.py  test_annotations.py  test_common.py  test_reader.py  test_stores.py  test_util.py  test_widget.py
tests/data/: annotations.json
tests/data/CMU-1-Small-Region/: 1.2.826.0.1.3680043.8.498.46702941076792458794464453066648511350.dcm  1.2.826.0.1.3680043.8.498.58740178995208579534253317996600852419.dcm  1.2.826.0.1.3680043.8.498.59138772023963819382497555356965497339.dcm  1.2.826.0.1.3680043.8.498.59317222794345851838438403002169487918.dcm
