[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "napari-wsi"
version = "0.1.3"
description = "A plugin to read whole slide images within napari."
license="Apache-2.0"
authors = [
    "Philipp Plewa <philipp.plewa@astrazeneca.com>",
]
maintainers = [
    "Philipp Plewa <philipp.plewa@astrazeneca.com>",
    "Robert Schweizer <robert.schweizer@astrazeneca.com>",
]
readme = "README.md"
repository = "https://github.com/AstraZeneca/napari-wsi"
classifiers = [
    "Framework :: napari",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Image Processing",
]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
dask = {version = ">=2023", extras = ["array"]}
imagecodecs = ">=2023.9.18"
magicgui = ">=0.7.3"
matplotlib = ">=3.8"
napari = ">=0.4.18"
numpy = ">=1.26"
rasterio = ">=1.3"
tifffile = ">=2023"
zarr = ">=2.16"

[tool.poetry.group.dev.dependencies]
black = "23.9.*"
invoke = "2.2.*"
isort = "5.12.*"
mypy= "1.6.*"
pylint = "3.0.*"
pytest = "7.4.*"
pytest-cov = "4.1.*"
pytest-qt = "4.2.*"
scikit-image = "0.22.*"

[tool.poetry.plugins."napari.manifest"]
napari-wsi = "napari_wsi:napari.yaml"

[tool.isort]
profile = "black"

[tool.mypy]
exclude = ["venv"]

[[tool.mypy.overrides]]
module = [
    "napari.*",
    "rasterio.*",
    "zarr.*",
]
ignore_missing_imports = true

[tool.pylint."MESSAGES CONTROL"]
disable = """
duplicate-code,
invalid-name,
missing-docstring,
too-many-arguments,
too-many-locals,
use-dict-literal,
"""
